# pyenchant

./: .build.yml  .buildinfo  .coveragerc  .cvsignore  .flake8  .gitignore  .gitmodules  .project  .travis.yml  CONTRIBUTING.md  ChangeLog  Changelog  MANIFEST  MANIFEST.in  README.md  README.rst  README.txt  TODO.txt  bootstrap.py  build.py  build_artifacts.py  changelog.html  contributing.html  ez_setup.py  faq.html  genindex.html  index.html  install.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  release.py  search.html  searchindex.js  setup.cfg  setup.py  shootout.html  tasks.py  tbump.toml  (+2 more)
.builds/: arch.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linters.yml  publish-test-pypi.yml  publish.yml  tests.yml  website.yml
_sources/: changelog.rst.txt  index.rst.txt  install.rst.txt  shootout.rst.txt  tutorial.rst.txt
_sources/api/: enchant.checker.rst.txt  enchant.errors.rst.txt
_static/: documentation_options.js
api/: enchant.checker.html  enchant.errors.html  enchant.html  enchant.pypwl.html  enchant.tokenize.html  enchant.utils.html  index.html
archive/: shootout.py
docs/: Makefile  conf.py  download.rst  faq.rst  index.rst  shootout.rst  tutorial.rst
docs/_static/: default.css  default.less
docs/_static/blueprint/: liquid.less
docs/_templates/: layout.html
docs/api/: enchant.rst
enchant/: __init__.py  _enchant.py  _enchant.pyx  enchant.h  enchant.i  enchant_wrap.c  errors.py  pypwl.py  tests.py  utils.py
enchant/checker/: CmdLineChecker.py  GtkSpellCheckerDialog.py  __init__.py  tests.py  wxSpellCheckerDialog.py
enchant/data/: .gitignore
enchant/tokenize/: __init__.py  de.py  en.py  tests.py
tests/: conftest.py  test_broker.py  test_checker.py  test_dict.py  test_docstrings.py  test_misc.py  test_multiprocessing.py  test_pwl.py  test_tokenize.py  test_utils.py
tools/: enchant-provider.h.patch  enchant.c.patch  ispell_checker.cpp.patch  myspell_checker.cpp.patch  pyenchant-1.1.0.ebuild  pyenchant-1.1.3.ebuild  pyenchant-1.1.5.ebuild  pyenchant-1.2.0.ebuild  setup.py2exe.py  shootout.py  test_multiprocessing.py  wininst.py  wx_example.py
tools/pyenchant-bdist-osx-sources/: Makefile  README.txt
tools/pyenchant-bdist-osx-sources/patches/: prefixdir_c.patch  prefixdir_h.patch
tools/pyenchant-bdist-win32-sources/: Makefile  README.txt
tools/pyenchant-bdist-win32-sources/patches/: aspell_file_util.cpp.patch  atypes.hxx.patch  compile-resource  configure.patch  diffmgr.cxx.patch  dllmain.patch  enchant-provider.h.patch  enchant.c.patch  enchant_Makefile.patch  enchant_configure.patch  filemgr.cxx.patch  hunspell.hxx.patch  hunzip.cxx.patch  ispell_checker.cpp.patch  myspell_Makefile.am.patch  myspell_Makefile.in.patch  myspell_checker.cpp.patch  myspell_checker.patch  pwl.c.patch  pwl.patch  relocatable.patch  suggestmgr.cxx.patch
tools/pyenchant-bdist-win32-sources/src/: glib-2.12.13.tar.bz2  glib-2.4.7.tar.bz2  libiconv-1.9.1.tar.bz2
website/: .gitignore  .hyde_deps  conf.py  devel.yaml  info.yaml  site.yaml
website/content/: _sphinx_index.rst  changelog.rst  contributing.rst  download.html  download.rst  faq.html  faq.rst  index.html  index.rst  install.rst  meta.yaml  robots.txt  shootout.html  shootout.rst  tutorial.html  tutorial.rst
website/content/api/: enchant.pypwl.rst  enchant.tokenize.rst  enchant.utils.rst  index.rst
website/content/media/: meta.yaml
website/content/media/css/: boilerplate.less  site.less  syntax.css
website/content/media/css/blueprint/: ie.less  reset.less  typography.less
website/content/news/: all.html  index.html  meta.yaml
website/content/news/feeds/: atom.xml
website/content/news/item/: meta.yaml  new-website-live.html  version-1.6.4-released.html  version-1.6.5-released.html  version-1.6.6-released.html
website/layout/: atom.j2  base.j2  entry.j2  macros.j2
