[tool.poetry]
name = "pyenchant"
version = "3.0.0rc2"
description = "Python bindings for the Enchant spellchecking system"
authors = [
  "Dimitri Merejkowsky <d.merej@gmail.com>",
  "Ryan Kelly <ryan@rfk.id.au>",
]
homepage = "https://pyenchant.github.io/pyenchant/"
repository = "https://github.com/pyenchant/pyenchant"
license = "LGPL-2.1-or-later"
readme = "README.rst"
keywords = [
  "spelling",
  "spellcheck",
  "enchant",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Linguistic",
]
packages = [
  { include = "enchant" },
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
# For bootstraping
requests = "^2.22.0"
invoke = "^1.4.1"
tomlkit = "^0.5.8"

# Tests
pytest = "^5.3.5"
pytest-cov = "^2.8.1"

# Website
sphinx = "^2.3.1"
sphinx-rtd-theme = "^0.4.3"
sphinx-autobuild = "^0.7.1"

# Linters
black = { version = "^19.10b0", python = "^3.6" }
flake8 = "^3.7.9"
pep8-naming = "^0.9.1"

# Bug in poetry publish: See
# https://github.com/python-poetry/poetry/issues/742
twine = { version = "^3.1.1", python = "^3.6" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
