[metadata]
name = pyenchant
version = 3.0.1
description = Python bindings for the Enchant spellchecking system
long_description = file: README.rst
author = Dimitri Merejkowsky
author_email = d.merej@gmail.com
url = https://pyenchant.github.io/pyenchant/
license = LGPL
keywords = spelling spellcheck enchant
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Libraries
  Topic :: Text Processing :: Linguistic

[options]
packages = find:
python_requires = >=3.5
include_package_data = true


[flake8]
# TODO: add E402 (module level import not on top of file"
ignore =
  E203
  E266
  E231
  E302
  E402
  E501
  W503
# TODO: those should be moved out of the public API,
# they are more like examples
exclude =
  enchant/checker/wxSpellCheckerDialog.py
  enchant/checker/GtkSpellCheckerDialog.py
  enchant/checker/CmdLineChecker.py
